--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                      <p>CODAGE FRONT-END</p>
                      
                      <h2 class="title-part-2 pb-5">ANGULAR 6</h2>
-                     <a><img src="images/screen-angResto.jpg" class="p-3 mb-5 img-fluid hoverable" alt="photo Angular 6" data-toggle="modal" data-target="#ModalAngResto"></a>
+                     <a><img src="images/screen-symAgence.jpg" class="p-3 mb-5 img-fluid hoverable" alt="photo Angular 6" data-toggle="modal" data-target="#ModalAngResto"></a>
                      <p>PROJET DE</p>
                      <h2 class="title-part-3">réservation</h2>
                      <p class="title-part-4">au restaurant</p>
