--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
         </div>
         </div>
     </div>
-<div class="spinner-border loader" role="status"></div>
+<!--<div class="spinner-border loader" role="status"></div>-->
     </section>
 
 <!--NAVABAR-->
