--- a/index.html
+++ b/index.html
@@ -412,6 +412,14 @@
                 -->
             </div>
         </div>
+                    <div class="row">
+            <div class="col-12 text-center h-25">
+                <div id="titre-principal" class="display-4 ">Graphiste - Web Designer - Développeur</div>
+                <a href="#apropos" class="js-scrollTo "><i class="fa fa-chevron-down fa-5x"></i></a>
+
+        </div>
+
+    </div>
     </div><!--Fin Container-->
 
 </header>
