--- a/index.html
+++ b/index.html
@@ -372,7 +372,8 @@
                 
             </ul>
             <span class="navbar-text align-top d-none d-lg-block">
-                <i class="fas fa-phone flip_H "></i> 06 83 59 81 21
+                <a href="tel:+33683598121">  <i class="fas fa-phone flip_H "></i> 06 83 59 81 21</a> 
+               
               </span> 
         </div>
 </nav>
