--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="author" content="">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="format-detection" content="telephone=no">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
@@ -590,7 +591,7 @@
                     <div class="col-12 d-block d-lg-none">
                         <a href="#Modal3js"   data-toggle="modal" ><img src="images/screen-VR.jpg"  class="p-3 mb-5 img-fluid hoverable">  </a>                          
                     </div>  
-                     <p>PROJET 3D et 360° DE</p>
+                     <p>PROJET 3D ET 360° DE</p>
                      <h2 class="title-part-3">réalité virtuelle</h2>
                      <p class="title-part-4">The House of the Ballenesque</p>
                      <p class='text-left pt-2  px-4 px-sm-2 px-md-1 px-lg-2 px-xl-2'>
