--- a/index.html
+++ b/index.html
@@ -1527,7 +1527,8 @@
         <!-- Footer Elements -->
     </div>
         <!-- Copyright -->
-        <div class="footer-copyright text-center py-3">© 2020 Copyright : JG - Julien Goscicki<br>
+        <div class="footer-copyright text-center py-3 ">
+            <span id="content">© 2020 Copyright : JG - Julien Goscicki - </span><span> Version</span><br>
           <a href="#">Mentions Légales</a>
         </div>
         <!-- Copyright -->
