--- a/index.html
+++ b/index.html
@@ -636,10 +636,10 @@
                      <p>CODAGE BACK-END</p>       
                      <h2 class="title-part-2 pb-5">SYMFONY 4</h2>
                      <div class="col-12  d-none d-lg-block" data-aos="flip-left" data-aos-duration="2000">
-                     <a><img src="images/screen-symAgence.jpg" class="p-3 mb-5 img-fluid hoverable" alt="photo Symfony 4 SymAgence"></a>
+                     <a><img src="images/screen-symAgence.jpg" class="p-3 mb-5 img-fluid hoverable" alt="photo Symfony 4 SymAgence" data-toggle="modal" data-target="#ModalSymAgence"></a>
                     </div>
                     <div class="col-12  d-block d-lg-none">
-                        <a><img src="images/screen-symAgence.jpg" class="p-3 mb-5 img-fluid hoverable" alt="photo Symfony 4 SymAgence"></a>
+                        <a><img src="images/screen-symAgence.jpg" class="p-3 mb-5 img-fluid hoverable" alt="photo Symfony 4 SymAgence" data-toggle="modal" data-target="#ModalSymAgence"></a>
                        </div>
                      <p>PROJET DE</p>
                      <h2 class="title-part-3">vente</h2>
