--- a/index.html
+++ b/index.html
@@ -321,6 +321,7 @@
 
 <!--NAVABAR-->
 <section id="nav-content">
+  
 <nav class="px-lg-4 px-xl-5 navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
         <a class="px-xl-5 navbar-brand js-scrollTo" href="#top"> <img src="./images/logo-JG-cntr.svg" alt="Logo JG" style=opacity:1;  />
             </a>
@@ -389,7 +390,7 @@
 <header>
 
  <div class="container-fluid px-0"> 
-    <div class="row text-center mt-5 mx-0 px-0">
+    <div class="row text-center mx-0 px-0">
         <div class="col-12">
             <div class="phrase">Julien Goscicki</div>
         </div>
