--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>Accueil</title>
-    <meta name="description" content="Application JG-site développée avec Angular : développement web et mobile avec du graphic design">
-    <meta name="author" content="Julien Goscicki">
+    <meta name="description" content="Single Page Application (SPA) JG-site ou JG-app développée avec Angular : je suis développeur web et mobile avec un background de graphiste">
+    <meta name="author" content="JG - Julien Goscicki">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="refresh" content="0;https://adoc7.github.io/JG-site/">
